# backup-site

./: .gitignore  CLEANUP_SUMMARY.md  COMMANDES_COMPLETES_A_Z.md  DOCS_INDEX.md  DOCUMENTATION_CREATED.md  DOCUMENTATION_STRUCTURE.md  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_NOTES.md  O2SWITCH_INFO.md  PRODUCTION_TEST_PLAN.md  PROGRESS.md  QUICKSTART.md  README.md  REORGANIZE_DOCS.md  START_HERE.md  TESTING.md  US2_TESTING_PLAN.md  WORKFLOW_COMPLET.md  architecture.md  backlog.md  pyproject.toml  sprint-planning.md  vision.md
.windsurf/rules/: coach.md  mentor.md
config/: README.md  example.yaml
docker/production-test/: .env.example  README.md  TESTING.md  WORKFLOW.md  docker-compose.yml
docker/production-test/ssh-server/: Dockerfile  entrypoint.sh
docker/test-ssh-server/: .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  init-mysql.sh  setup-test.sh
docs/: DOCS_INDEX.md  START_HERE.md
docs/architecture/: README.md
docs/development/: TESTING.md
docs/planning/: README.md  backlog.md  sprint2-workflow-review.md  vision.md
docs/progress/: AGILE_MENTOR_REPORT.md
docs/references/: AGILE_DOCUMENTATION_GUIDE.md  DOCUMENTATION_SUMMARY.md  SPRINT_WORKING_DOCUMENTS.md
docs/workflows/: COMMANDES_COMPLETES_A_Z.md  PRODUCTION_TEST_PLAN.md  README.md  WORKFLOW_COMPLET.md  WORKFLOW_VISUAL.md
src/backup_site/: __init__.py  cli.py
src/backup_site/backup/: __init__.py  database.py  files.py
src/backup_site/config/: __init__.py  models.py
tests/: conftest.py  test_database.py  test_files.py  test_restore_database.py  test_restore_files.py
(+12 files in other folders)
